#Author(s): Pieter.Kempeneers@ec.europa.eu,
#Copyright (C) 2018-2025 European Union (Joint Research Centre)
#
#This file is part of jiplib.
#
#jiplib is free software: you can redistribute it and/or modify
#it under the terms of the GNU General Public License as published by
#the Free Software Foundation, either version 3 of the License, or
#(at your option) any later version.
#
#jiplib is distributed in the hope that it will be useful,
#but WITHOUT ANY WARRANTY; without even the implied warranty of
#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#GNU General Public License for more details.
#
#You should have received a copy of the GNU General Public License
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jiplib"
version = "1.1.5"
description = ""
readme = "README.md"
authors = [
  { name = "Pieter Kempeneers", email = "pieter.kempeneers@ec.europa.eu" },
]
license = { text = "GPLv3" }
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
]
optional-dependencies = {}
dependencies = []
requires-python = ">=3.8"
